--- a/gitstats/index.html
+++ b/gitstats/index.html
@@ -19,5 +19,5 @@
 <li><a href="tags.html">Tags</a></li>
 </ul>
 </div>
-<dl><dt>Project name</dt><dd>OnOpChat.git</dd><dt>Generated</dt><dd>2018-02-27 21:13:24 (in 289 seconds)</dd><dt>Generator</dt><dd><a href="http://gitstats.sourceforge.net/">GitStats</a> (version 55c5c28), git version 2.7.4, gnuplot 5.0 patchlevel 3</dd><dt>Report Period</dt><dd>2015-10-05 12:17:03 to 2018-02-26 19:37:37</dd><dt>Age</dt><dd>876 days, 613 active days (69.98%)</dd><dt>Total Files</dt><dd>4902</dd><dt>Total Lines of Code</dt><dd>574647 (1257675 added, 683028 removed)</dd><dt>Total Commits</dt><dd>7843 (average 12.8 commits per active day, 9.0 per all days)</dd><dt>Authors</dt><dd>30 (average 261.4 commits per author)</dd></dl></body>
+<dl><dt>Project name</dt><dd>OnOpChat.git</dd><dt>Generated</dt><dd>2018-02-27 21:37:56 (in 13 seconds)</dd><dt>Generator</dt><dd><a href="http://gitstats.sourceforge.net/">GitStats</a> (version 55c5c28), git version 2.7.4, gnuplot 5.0 patchlevel 3</dd><dt>Report Period</dt><dd>2016-12-13 16:46:26 to 2018-02-26 19:37:37</dd><dt>Age</dt><dd>441 days, 341 active days (77.32%)</dd><dt>Total Files</dt><dd>4902</dd><dt>Total Lines of Code</dt><dd>111001 (420422 added, 309421 removed)</dd><dt>Total Commits</dt><dd>5564 (average 16.3 commits per active day, 12.6 per all days)</dd><dt>Authors</dt><dd>26 (average 214.0 commits per author)</dd></dl></body>
 </html>
