--- a/jpegcam.html
+++ b/jpegcam.html
@@ -1,22 +1,37 @@
 <html>
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="jpeg_camera/jpeg_camera_no_flash.js" type="text/javascript"></script>
-<script src="jpeg_camera/canvas-to-blob.js" type="text/javascript"></script>
-</head>
-<div id="camera" style="height:1px;width:1px"></div>
-<script>
+	<head>
+		<script src="jpeg_camera/jpeg_camera_no_flash.js"></script>
+		<script src="jpeg_camera/canvas-to-blob.js"></script>
+	</head>
+	<body>
+	<div id="camera" style="height:1px;width:1px"/>
+	<script>
+	var camera = new JpegCamera("#camera");
+	camera.ready(() => {
+		var timer = setInterval(() => {tryDetectKnownPerson(camera);}, 2000);
+	});
 
-var camera = new JpegCamera("#camera");
-camera.ready(() => {
-var snapshot = camera.capture({shutter:false});
-snapshot.upload({api_url: "https://ioudasdotsfaceapi.azurewebsites.net/api/RecognizeFace?code=4Kapx/61HmagCNM0K8dNPfy/5MmvK1ISVUBZE1QCuzp4vwMPC3Sy5g==&debug&saveOnly"}).done(function(response) {
-  console.log(JSON.parse(response).PersonId);
-  this.discard();
-}).fail(function(status_code, error_message, response) {
-  console.error("Upload failed with status " + status_code);
-});
-
-});
-</script>
+	function tryDetectKnownPerson(camera) {
+		var snapshot = camera.capture({shutter:false});
+		snapshot.upload({api_url: "https://ioudasdotsfaceapi.azurewebsites.net/api/RecognizeFace?code=4Kapx/61HmagCNM0K8dNPfy/5MmvK1ISVUBZE1QCuzp4vwMPC3Sy5g==&debug&saveOnly"
+		}).done(function(response) {
+		  handleResponse(response)
+		  /*this.discard();*/
+		}).fail(function(status_code, error_message, response) {
+		  console.error("Upload failed with status " + status_code);
+		});
+	}
+	
+	function handleResponse(response) {
+		if(!response) return;
+		var respJson = JSON.parse(response)
+		if(respJson.hasOwnProperty("PersonId")) {
+			console.log(respJson.PersonId);
+		}
+		else{
+			console.log("I don't see anyone familiar");
+		}
+	}
+	</script>
+	</body>
 </html>
